Finished Hands-on Lab: Static Pages

--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -124,3 +124,11 @@ img{
     text-align:center;
     box-shadow: 2px 2px 3px #999;  
 }
+
+.card {
+    transition: transform 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+}
